cluster/apps/networking/traefik/app/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
    gatus.io/endpoint: |
      group: internal
      alerts:
        - type: pushover
      ui:
        hide-hostname: true
        hide-url: true
spec:
  controller: traefik.io/ingress-controller
