cluster/apps/networking/traefik/app/service-internal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: networking
  annotations:
    io.cilium/lb-ipam-ips: 10.0.10.30
  labels:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  selector:
    app.kubernetes.io/instance: traefik-networking
    app.kubernetes.io/name: traefik
  ports:
    - name: webinternal
      port: 80
      protocol: TCP
      targetPort: webinternal
    - name: websecureinternal
      port: 443
      protocol: TCP
      targetPort: websecureinternal
    - name: websecureinternal-http3
      port: 443
      protocol: UDP
      targetPort: websecureinternal-http3
