cluster/apps/networking/traefik/app/gateway-external.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: networking
  labels:
    gateway.sysinfra.pro/type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: "10.0.10.20"
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "wildcard-${SECRET_DOMAIN/./-}-tls"
