cluster/apps/networking/traefik/app/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
  namespace: networking
  labels:
    gateway.sysinfra.pro/type: internal
spec:
  gatewayClassName: traefik
  addresses:
    - type: IPAddress
      value: "10.0.10.30"
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 8443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: "wildcard-internal-${SECRET_DOMAIN/./-}-tls"
